sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:8: error: ';' expected but '(' found.
    var elementVal : getValue(it)
                             ^